--- a/main.css
+++ b/main.css
@@ -15,6 +15,13 @@ body{
   text-transform: uppercase;
 }
 
+  .text{
+    color:#fff;
+    line-height:  1.4;
+    width: 50%;
+    text-align: center;
+    margin: 0 auto;
+  }
 .homepage {
     text-align: center;
     background-image:  url('https://www.metallica.com/on/demandware.static/-/Sites-Metallica-Library/default/dwb6d5ba9e/images/homepage/home-hero.jpg');
@@ -32,7 +39,7 @@ body{
 
 .register-form input[type='text'] {
   width: 50%;
-  padding: 1% 3% 1% 0.5;
+  padding: 1% 3% 1% 0.5%;
 }
 
 .register-form input[type='submit'] {
